--- a/.github/ci.yaml
+++ b/.github/ci.yaml
@@ -2,16 +2,20 @@ name: CI - JWT Validator
 
 on:
   push:
+    branches: [ "**" ]
   pull_request:
+    branches: [ "**" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # 1. Baixa o código do repositório
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2. Instala Java 21 e Maven
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -19,8 +23,17 @@ jobs:
           distribution: 'temurin'
           cache: maven
 
-      - name: Run Maven tests
-        run: mvn -B test
+      # 3. Executa os testes unitários
+      - name: Run tests
+        run: mvn -B clean test
 
+      # 4. Builda a aplicação (gera JAR na pasta target/)
       - name: Build project
-        run: mvn -B clean package
+        run: mvn -B package -DskipTests=false
+
+      # 5. Salva o JAR como artefato de build (útil pra baixar)
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: jwt-validator-jar
+          path: target/*.jar
