--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,8 +24,8 @@ jobs:
           cache: maven
 
 
-      - name: Run tests
-        run: mvn -B clean test
+      - name: Run tests + JaCoCo coverage validation
+        run: mvn clean verify
 
 
       - name: Build project
